FIx spacing
The spacing between the boxes were too dense. These commits aim to change that as well as wrap the text in the boxes to be more fitted for their respective images.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -14,6 +14,7 @@ img {
   flex:1;
   flex-direction: row;
   justify-content:center;
+  margin-bottom:32px;
 }
 
 /* do not edit this footer */
@@ -33,8 +34,9 @@ img {
   display:flex;
   flex:1;
   flex-direction:row;
-  justify-content:space-evenly;
+  justify-content:center;
   align-items:center;
+  gap:52px;
 }
 
 .box {
@@ -42,4 +44,8 @@ img {
   flex:1;
   flex-direction:column;
   justify-content:space-around;
+}
+
+.text{
+  text-wrap:wrap;
 }
